--- a/assets/style.css
+++ b/assets/style.css
@@ -82,6 +82,50 @@ li a:hover:not(.active) {
     text-align: center;
 }
 
+.carrito-card-container {
+    border-radius: 24px;
+    padding: 24px;
+}
+
+.carrito-card-container h4 {
+    margin-top: 0;
+}
+
+.carrito-card {
+    width: 14vw;
+    display: flex;
+    padding: 24px;
+    color: aliceblue;
+    border-radius: 24px;
+    background-color: #9b5300aa;
+}
+
+.carrito-card img {
+    max-width: 5vw;
+    border-radius: 24px;
+}
+
+.card-description {
+    max-width: 8vw;
+    min-height: 14vh;
+    margin: 0 0 0 24px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.card-description h5 {
+    margin-bottom: 8px;
+}
+
+.card-description span {
+    font-size: 12px;
+}
+
+.card-description button {
+    margin-top: 36px;
+    justify-self: flex-end;
+}
 
 .descripcion {
     margin: auto;
