Arreglando el style de las cartas

--- a/assets/style.css
+++ b/assets/style.css
@@ -67,6 +67,7 @@ li a:hover:not(.active) {
 }
 
 .card-item h4 {
+    font-size: 1.88vh;
     margin: 8px auto 8px;
     max-width: 11vw;
 }
@@ -74,8 +75,8 @@ li a:hover:not(.active) {
 .card-item img {
     border-radius: 24px;
     margin: 1.2vh auto;
-    width: 28vh;
-    height: 32vh;
+    width: 14.5vw;
+    height: 28vh;
 }
 
 .text-align-center {
