--- a/assets/style.css
+++ b/assets/style.css
@@ -138,10 +138,19 @@ li a:hover:not(.active) {
 
 .descripcion {
     margin: auto;
-    max-width: 10vw;
+    max-width: 14vw;
     font-weight: normal;
     font-size: 12px;
-    margin-bottom: 10px;
+    margin-bottom: 2.6vh;
+}
+
+.categoria {
+    font-size: 1.6vh;
+    margin-bottom: 0.5vh;
+}
+
+.precio {
+    font-size: 2vh;
 }
 
 .font-weight-500 {
